--- a/src/template/navbar/navbar.css
+++ b/src/template/navbar/navbar.css
@@ -12,7 +12,7 @@
   float: left;
   text-align: center;
   text-decoration: none;
-  font-size: xx-large;
+  font-size: x-large;
   padding: 5px 15px;
   border-radius: 4px;
   margin-right: 10px;
@@ -23,14 +23,17 @@
   -webkit-text-fill-color: transparent;
 }
 .topnav .logo span img {
-  width: 50px;
+  width: 30px;
   position: relative;
+}
+.topnav .logo span .text-logo {
+  margin-top: 0;
 }
 /* Right-aligned section inside the top navigation */
 .topnav-right {
   float: right;
   color: rgb(255, 255, 255);
-  font-size: xx-large;
+  font-size: x-large;
   display: flex;
   justify-content: flex-start;
   align-items: center;
