--- a/src/template/page/about/about.css
+++ b/src/template/page/about/about.css
@@ -3,10 +3,25 @@
   color: rgb(0, 1, 2);
 }
 .member {
+  margin: 10px 10px;
   text-align: center;
+  background-color: rgba(255, 255, 255, 0.336);
+  width: 250px;
+  height: 300px;
+  border-radius: 15px 50px;
 }
 .member .image img {
-  width: 150px;
+  margin-top: 20px;
+  width: 200px;
   height: 200px;
-  border-radius: 25px;
+  border-radius: 50%;
+}
+.member .nama {
+  font-size: x-large;
+  font-weight: bolder;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+.member .title {
+  margin-top: 0;
 }
