--- a/src/template/page/about/about.css
+++ b/src/template/page/about/about.css
@@ -2,6 +2,15 @@
   text-align: center;
   color: rgb(0, 1, 2);
 }
+.about h2 {
+  padding: 20px 20px;
+  margin: 10px 10px;
+  text-align: center;
+}
+.team {
+  display: flex;
+  flex-wrap: wrap;
+}
 .member {
   margin: 10px 10px;
   text-align: center;
