--- a/src/template/page/about/about.css
+++ b/src/template/page/about/about.css
@@ -8,11 +8,8 @@
   margin: 10px 10px;
   text-align: center;
 }
-.konten {
-  display: flex;
-  align-items: center;
-}
-.team {
+
+.konten .team {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 25px;
