--- a/src/template/page/productList/productList.css
+++ b/src/template/page/productList/productList.css
@@ -124,19 +124,31 @@ span.page:hover:not(.active) {
   background-color: rgb(237, 253, 7);
   color: rgb(5, 5, 5);
   border-radius: 10px;
-  font-weight: bold;
 }
 
 .diskonButton {
   background-color: rgb(7, 134, 253);
   color: rgb(5, 5, 5);
   border-radius: 10px;
-  font-weight: bold;
 }
 
 .stokButton {
   background-color: rgb(7, 253, 28);
   color: rgb(5, 5, 5);
   border-radius: 10px;
+}
+
+.buttonAdd {
+  margin-left: 200px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  font-size: medium;
   font-weight: bold;
+  background-image: linear-gradient(
+    to right,
+    rgba(147, 231, 231, 0.678),
+    rgb(240, 243, 243)
+  );
+  color: rgb(56, 55, 55);
 }
