--- a/src/template/navbar/navbar.css
+++ b/src/template/navbar/navbar.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: fontLogo;
-  src: url(./VeganStylePersonalUse-5Y58.ttf);
+  src: url(./Pacho.ttf);
 }
 /* Add a black background color to the top navigation */
 .topnav {
